# ironspread

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  requirements_dev.txt
.github/workflows/: codeql-analysis.yml  e2etest.yml  node.js.yml  rust.yml
backend/: Cargo.toml
backend/src/: main.rs
electron/: main.ts
frontend/: .eslintrc.json  electron-builder.yml  package-lock.json  package.json  setupTests.ts  webpack.react.config.js
frontend/electron/: main.ts
frontend/src/: App.css  App.js  App.test.tsx  App.tsx  Item.test.tsx  Item.tsx  SearchForm.test.tsx  SearchForm.tsx  Table.test.tsx  Table.tsx  data.test.tsx  data.tsx  index.tsx
frontend/src/__snapshots__/: SearchForm.test.tsx.snap
src/: App.test.tsx  App.tsx  index.tsx
test/: run_tests.py  test_backend_api.py
test/tests/: pytest.ini
test/tests/features/: backend_provides_data.feature  starting_app.feature
test/tests/step_devs/: conftest.py  test_backend_provides_data.py  test_starting_app.py
