[package]
name = "ironspread"
version = "0.1.0"
authors = ["Martha Brennich <martha.brennich@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
